--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 hyper = "0.12"
 log = "0.4"
 pretty_env_logger = "0.3"
-serde = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
 rand = "0.7"
 futures = "0.1"
