--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
 rand = "0.7"
 futures = "0.1"
-tokio="0.1"
-http="0.1"
+tokio = "0.1"
+http = "0.1"
 regex = "1"
+config = "0.9"
