--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,14 +5,15 @@ authors = ["ijoyce"]
 edition = "2018"
 
 [dependencies]
-hyper = "0.12"
+hyper = "0.13"
 log = "0.4"
 pretty_env_logger = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
 rand = "0.7"
 futures = "0.1"
-tokio = "0.1"
-http = "0.1"
+tokio = { version = "0.2", features = ["full"] }
+http = "0.2"
 regex = "1"
 config = "0.9"
+lazy_static = "1.4.0"
