--- a/Configuration.toml
+++ b/Configuration.toml
@@ -1,6 +1,6 @@
 listener_address = "127.0.0.1:3001"
 proxy_address = "httpbin.org"
-failures = [
+scenarios = [
     { path = "/error", failure_type = "Error", frequency = 0.5, delay = 300 },
     { path = "/delay", failure_type = "Delay", frequency = 0.25, delay = 800 },
     { path = "/timeout", failure_type = "Timeout", frequency = 0.4, delay = 300 },
