--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ hyper = "0.13"
 log = "0.4"
 pretty_env_logger = "0.4"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.59"
 rand = "0.7"
 tokio = { version = "0.2", features = ["full"] }
 http = "0.2"
