--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,5 @@ rand = "0.8"
 tokio = { version = "0.2", features = ["full"] }
 http = "0.2"
 regex = "1"
-config = "0.10"
+config = { version = "0.11.0", features = ["toml"] }
 lazy_static = "1.4.0"
